--- a/list.html
+++ b/list.html
@@ -25,6 +25,6 @@
             <li>Achuu</li>
         </ul>
         <dt style="font-size: large;"><b>3. Description List</b></dt>
-        <dd>Description lists are used to associate terms with their relevant descriptions. This is done by utilizing the description list element.</dd>
+        <dd>Description lists are used to associate terms with their relevant descriptions and branch learning is important. This is done by utilizing the description list element.</dd>
     </dl>
 </html>
